DownloadLink: -memory usage optimizations
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@29504 ebf7c1c2-ba36-0410-9fe8-c592906822b4